# efi-boot

./: README.md  pyproject.toml
src/efiboot/: bootentry.py
