[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "efiboot"
version = "0.0.1"
authors = [
  { name="TejasPersonal" },
]
description = "Library for reading and managing UEFI boot entries on Linux systems."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Boot",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TejasPersonal/efiboot"
Issues = "https://github.com/TejasPersonal/efiboot/issues"
